# propulse

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
public/: Template_powerpoint.pptx
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_chiffrage.sql  003_prestation.sql  004_prestation_v2.sql  005_drop_unite.sql  006_add_cp.sql  007_powerpoint.sql  008_cr_pj.sql
src-tauri/src/: lib.rs  main.rs
src/components/: Layout.tsx  Sidebar.tsx
src/components/catalogue/: ArticleFormDialog.tsx  FamillesPanel.tsx
src/components/chiffrage/: ArticlePicker.tsx  DevisTab.tsx  FournituresTab.tsx  LigneFormDialog.tsx  PiecesJointes.tsx  PrestationLigneDialog.tsx  PrestationSection.tsx  PrestationTab.tsx  ProfilPicker.tsx
src/components/compte-rendus/: CRAttachments.tsx  CRDetail.tsx  CRForm.tsx  CRList.tsx  CRTab.tsx  RichTextEditor.tsx
src/components/dossiers/: DossierFormDialog.tsx  StatutBadge.tsx
src/components/powerpoint/: PowerPointTab.tsx
src/components/schemas/: SchemaTab.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  select.tsx  tabs.tsx  textarea.tsx
src/hooks/: useTheme.ts
src/lib/: db.ts  exportExcel.ts  generatePptx.ts  queries.ts  types.ts
src/pages/: Bibliotheque.tsx  Catalogue.tsx  Chiffrage.tsx  CompteRendus.tsx  Dashboard.tsx  DossierDetail.tsx  Dossiers.tsx  Pipeline.tsx  PowerPoint.tsx  Schemas.tsx
