[package]
name = "propulse"
version = "0.1.0"
description = "Propulse — Outil de pilotage avant-vente IT"
authors = []
edition = "2021"

[lib]
name = "propulse_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-shell = { version = "2" }
tauri-plugin-fs = { version = "2" }
tauri-plugin-dialog = { version = "2" }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
